--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,29 +21,31 @@ body.dark{
     transition-duration: 1s;
 
 }
-nav.dark h4{
+.logo.dark{
     color: rgb(147, 188, 224)
 }
-h4{
+.logo{
     color: rgb(4, 138, 138);
 
 }
 
-img{
+.imagemProduto{
     border-radius: 8px;
     width: 200px;
     height: 200px;
 }
-button{
+.buttonAdicionar{
 
-  background-color: rgb(57, 141, 141); 
   padding: 10px 20px; 
-  border: 1px solid rgb(141, 180, 224); 
   border-radius: 10px; 
   cursor: pointer; 
   text-decoration: none;
+  background-color: transparent; 
+  color: #0b6ed8; 
+  border: 2px solid #0161c7; 
+  cursor: pointer; 
 }
-button:focus{
+.buttonAdicionar:focus{
        
     background-color: rgb(198, 255, 252);
     transition-duration: 0.3s;
@@ -52,25 +54,26 @@ button:focus{
     box-shadow: 0px 3px 3px rgb(82, 79, 79);
     outline: none;
 }
-button:hover{
-    background-color: rgb(198, 255, 252);
+.buttonAdicionar:hover{
     transition-duration: 0.3s;
     width: 100px;
     height: 40px;
     box-shadow: 0px 3px 3px rgb(82, 79, 79);
+    background-color: #007bff; /* Mudar cor de fundo */
+    color: white; /* Mudar cor do texto para branco */
 }
-button:disabled{
+.buttonAdicionar:disabled{
     background-color: rgb(66, 66, 66);
     color: white;
     pointer-events: none;
     cursor: not-allowed; 
     opacity: 0.6; 
 }
-button:disabled:hover{
+.buttonAdicionar:disabled:hover{
     background-color: rgb(37, 37, 37);
     
 }
-a{
+.navLink{
     text-decoration: none;
     color: black;
     padding: 100px;
@@ -80,7 +83,7 @@ a{
     margin: 0%;
 
 }
-a.dark{
+.navLink.dark{
     text-decoration: none;
     color: rgb(255, 255, 255);
     padding: 100px;
@@ -89,7 +92,7 @@ a.dark{
     border: 0%;
     margin: 0%;
 }
-nav{
+.nave{
     background-color: rgb(30, 207, 207);
     border-radius: 20px;
     display: flex;
@@ -103,7 +106,7 @@ nav{
     transition-duration: 1s;
 
 }
-nav.dark{
+.nave.dark{
     background-color: rgb(12, 122, 122);
     border-radius: 20px;
     display: flex;
@@ -116,64 +119,50 @@ nav.dark{
     box-shadow: 0px 0px 0px rgb(82, 79, 79);
     transition-duration: 1s;
 }
-nav p {
+.tema {
     transition-duration: 0.5s;
 }
-nav.dark p {
+.nave.dark.tema {
     transition-duration: 0.5s;
 
 }
-nav p:hover {
+.tema:hover {
     color: rgb(255, 255, 255);
     transition-duration: 0.5s;
     transform: rotate(180deg);
-
+    
 
 }
-nav.dark p :hover {
+.nave.dark .tema :hover {
     color: rgb(0, 0, 0);
     transition-duration: 0.5s;
+    cursor: pointer;
 
 }
-a:hover{
+.navLink:hover{
         color: rgb(198, 255, 252);
         transition-duration: 0.5s;
+        cursor: pointer;
     }
-a.dark :hover{
+.navLink.dark :hover{
         color: rgb(117, 216, 255);
         transition-duration: 0.5s;
+        cursor: pointer;
     }
 
-nav button:hover{
-    background-color: rgb(141, 180, 224);
-    cursor: pointer;
-}
-nav button{
-        background-color: rgb(211, 209, 209);
-        color: rgb(0, 0, 0);
-        border-radius: 100%;
-        height: 60%;
-        width: 3%;
-        border-color: rgb(255, 255, 255);
-        border-image: initial;
-        border-style: solid;
-        
-    }
-    input {
-        background-color: black;
-    }
-nav img{
-    height: 50px;
-    width: 50px;
-    border-radius: 100%;
 
-}
-ul{
+
+.listaProduto{
     display: grid;
     list-style: none;
     grid-template-columns: repeat(4, 1fr);
 }
-li{
+.carrinho{
+    display: grid;
+    list-style: none;
+    grid-template-columns: repeat(4, 1fr);
+}
+.produtoLista{
     background-color: rgb(141, 180, 224);
     border-radius: 30px;
     margin: 20px;
@@ -184,17 +173,7 @@ li{
 
     
 }
-li div{
-    width: 220px;
-    line-clamp: 20px;
-     display: -webkit-box;
-    -webkit-line-clamp: 2;
-    overflow: hidden;       
-    text-overflow: ellipsis; /* Adiciona as reticências (...) quando o texto é truncado */
-    -webkit-box-orient: vertical;
-    line-height: 1.4; 
-}
-li.dark{
+.produtoLista.dark{
     background-color: rgb(35, 64, 80);
     border-radius: 30px;
     margin: 20px;
@@ -204,11 +183,16 @@ li.dark{
     transition-duration: 1s;
 
 }
-li.dark button {
-    border-color: rgb(35, 64, 80);
-    color: white;
+.produtoLista.dark .buttonAdicionar {
+    border-color: rgb(113, 205, 255);
+    color: rgb(113, 205, 255);
 }
-ul.carrinho li {
+.produtoLista.dark .buttonAdicionar:hover {
+    background-color: #a1c7f0;
+    border-color: rgb(113, 205, 255);
+    color: rgb(0, 0, 0);
+}
+.listaCarrinho {
     background-color: rgb(141, 180, 224);
     border-radius: 30px;
     margin: 20px;
@@ -217,15 +201,29 @@ ul.carrinho li {
     height: 100px;
     transition-duration: 1s;
 }
-ul.carrinho li.dark{
+.listaCarrinho.dark{
     background-color:  rgb(35, 64, 80);
 }
-h1 {
+.carregar {
  animation: girar 2s linear infinite;
  color: rgb(35, 173, 207);
  
 }
-
+.remover{
+    background-color: rgb(57, 141, 141); 
+  padding: 10px 20px; 
+  border: 1px solid rgb(141, 180, 224); 
+  border-radius: 10px; 
+  cursor: pointer; 
+  text-decoration: none;
+}
+.remover:hover{
+    background-color: rgb(219, 22, 22);
+    transition-duration: 0.3s;
+    width: 100px;
+    height: 40px;
+    box-shadow: 0px 3px 3px rgb(82, 79, 79);
+}
 @media (max-width: 1024px){
     ul{
         grid-template-columns: repeat(3, 1fr);
